Versión al migrar a godaddy del admin

--- a/Administrador/src/index.html
+++ b/Administrador/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <meta name="author" content="Mario Domínguez" />
-  <meta name="copyright" content="Presidencia Municipal de León" />
+  <meta name="copyright" content="REDAMM" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--Iconos Angular Material-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
