Up: Creacion de contraseña, alta de usuarios front

--- a/Administrador/src/index.html
+++ b/Administrador/src/index.html
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Plantilla</title>
+  <title>Administrador Fastrun</title>
   <base href="/">
   <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <meta name="author" content="Mario Domínguez" />
   <meta name="copyright" content="REDAMM" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Administrador de la plataforma Fastrun"/>
   <!--Iconos Angular Material-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Iconos Font Awesome-->
